[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/it.ludidorici.mp-benet/example/example_ui.gd" type="Script" id=1]
[ext_resource path="res://addons/it.ludidorici.mp-benet/benet_node.gd" type="Script" id=2]
[ext_resource path="res://addons/it.ludidorici.mp-benet/example/example_game.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BENetNode" type="Node" parent="Panel"]
script = ExtResource( 2 )

[node name="Game" type="Node" parent="Panel/BENetNode"]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Server" type="Button" parent="Panel/VBoxContainer/Create"]
margin_right = 97.0
margin_bottom = 20.0
text = "Create Server"

[node name="Client" type="Button" parent="Panel/VBoxContainer/Create"]
margin_left = 101.0
margin_right = 195.0
margin_bottom = 20.0
text = "Create Client"

[node name="Close" type="Button" parent="Panel/VBoxContainer/Create"]
margin_left = 199.0
margin_right = 246.0
margin_bottom = 20.0
disabled = true
text = "Close"

[node name="RPC" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0

[node name="SendRPC" type="Button" parent="Panel/VBoxContainer/RPC"]
margin_right = 71.0
margin_bottom = 24.0
disabled = true
text = "Send RPC"

[node name="Mode" type="OptionButton" parent="Panel/VBoxContainer/RPC"]
margin_left = 75.0
margin_right = 116.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/RPC"]
margin_left = 120.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 19.0
text = "Channel:"

[node name="Channel" type="SpinBox" parent="Panel/VBoxContainer/RPC"]
margin_left = 179.0
margin_right = 253.0
margin_bottom = 24.0
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="Bytes" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 76.0

[node name="SendBytes" type="Button" parent="Panel/VBoxContainer/Bytes"]
margin_right = 83.0
margin_bottom = 24.0
disabled = true
text = "Send Bytes"

[node name="Mode" type="OptionButton" parent="Panel/VBoxContainer/Bytes"]
margin_left = 87.0
margin_right = 128.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Bytes"]
margin_left = 132.0
margin_top = 5.0
margin_right = 187.0
margin_bottom = 19.0
text = "Channel:"

[node name="Channel" type="SpinBox" parent="Panel/VBoxContainer/Bytes"]
margin_left = 191.0
margin_right = 265.0
margin_bottom = 24.0
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="Replicator" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 100.0

[node name="Spawn" type="Button" parent="Panel/VBoxContainer/Replicator"]
margin_right = 52.0
margin_bottom = 20.0
text = "Spawn"

[node name="Pings" type="ItemList" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )

[connection signal="pressed" from="Panel/VBoxContainer/Create/Server" to="." method="_on_Server_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Create/Client" to="." method="_on_Client_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Create/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RPC/SendRPC" to="." method="_on_SendRPC_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Bytes/SendBytes" to="." method="_on_SendBytes_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Replicator/Spawn" to="." method="_on_Spawn_pressed"]
